--- a/src/output.css
+++ b/src/output.css
@@ -672,6 +672,10 @@ video {
   height: 0.75rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -680,8 +684,8 @@ video {
   height: 100%;
 }
 
-.h-32 {
-  height: 8rem;
+.h-80 {
+  height: 20rem;
 }
 
 .w-16 {
@@ -737,16 +741,12 @@ video {
   justify-content: flex-start;
 }
 
-.justify-center {
-  justify-content: center;
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-evenly {
-  justify-content: space-evenly;
 }
 
 .gap-10 {
@@ -843,6 +843,10 @@ video {
   padding-bottom: 4rem;
 }
 
+.pb-20 {
+  padding-bottom: 5rem;
+}
+
 .pl-1 {
   padding-left: 0.25rem;
 }
@@ -857,10 +861,6 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
 }
 
 .text-center {
@@ -936,6 +936,10 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:w-full {
+    width: 100%;
+  }
+
   .sm\:rounded {
     border-radius: 0.25rem;
   }
