--- a/src/output.css
+++ b/src/output.css
@@ -777,6 +777,10 @@ video {
   gap: 1rem;
 }
 
+.gap-10 {
+  gap: 2.5rem;
+}
+
 .place-self-center {
   place-self: center;
 }
@@ -1068,8 +1072,8 @@ video {
     flex-direction: row;
   }
 
-  .sm\:gap-4 {
-    gap: 1rem;
+  .sm\:gap-10 {
+    gap: 2.5rem;
   }
 
   .sm\:rounded {
@@ -1138,5 +1142,9 @@ video {
 @media (min-width: 1024px) {
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
   }
 }
