--- a/src/output.css
+++ b/src/output.css
@@ -554,36 +554,12 @@ video {
   --tw-contain-style:  ;
 }
 
-.-z-10 {
-  z-index: -10;
+.absolute {
+  position: absolute;
 }
 
-.col-start-1 {
-  grid-column-start: 1;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
-}
-
-.col-end-12 {
-  grid-column-end: 12;
-}
-
-.row-start-2 {
-  grid-row-start: 2;
-}
-
-.row-start-3 {
-  grid-row-start: 3;
-}
-
-.row-end-2 {
-  grid-row-end: 2;
-}
-
-.row-end-5 {
-  grid-row-end: 5;
+.relative {
+  position: relative;
 }
 
 .mx-8 {
@@ -593,10 +569,6 @@ video {
 
 .-ml-44 {
   margin-left: -11rem;
-}
-
-.-mt-32 {
-  margin-top: -8rem;
 }
 
 .mb-1 {
@@ -643,6 +615,10 @@ video {
   margin-right: 1rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mr-8 {
   margin-right: 2rem;
 }
@@ -657,6 +633,10 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .inline-block {
@@ -696,8 +676,8 @@ video {
   height: 1.25rem;
 }
 
-.h-full {
-  height: 100%;
+.h-headerh {
+  height: 36rem;
 }
 
 .w-16 {
@@ -706,10 +686,6 @@ video {
 
 .w-24 {
   width: 6rem;
-}
-
-.w-4\/6 {
-  width: 66.666667%;
 }
 
 .w-56 {
@@ -726,11 +702,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
 }
 
 .cursor-pointer {
@@ -769,6 +740,10 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -799,10 +774,6 @@ video {
 
 .place-self-center {
   place-self: center;
-}
-
-.self-start {
-  align-self: flex-start;
 }
 
 .self-center {
@@ -866,6 +837,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-fixed {
+  background-attachment: fixed;
 }
 
 .object-cover {
@@ -963,6 +938,10 @@ video {
   padding-top: 1.25rem;
 }
 
+.pt-72 {
+  padding-top: 18rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1051,10 +1030,6 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:row-end-3 {
-    grid-row-end: 3;
-  }
-
   .sm\:-ml-36 {
     margin-left: -9rem;
   }
@@ -1080,16 +1055,12 @@ video {
     width: max-content;
   }
 
+  .sm\:w-full {
+    width: 100%;
+  }
+
   .sm\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .sm\:grid-rows-3 {
-    grid-template-rows: repeat(3, minmax(0, 1fr));
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
   }
 
   .sm\:rounded {
@@ -1098,26 +1069,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .md\:col-end-13 {
-    grid-column-end: 13;
-  }
-
-  .md\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .md\:row-end-1 {
-    grid-row-end: 1;
-  }
-
-  .md\:row-end-4 {
-    grid-row-end: 4;
-  }
-
   .md\:block {
     display: block;
   }
@@ -1134,16 +1085,13 @@ video {
     display: none;
   }
 
-  .md\:grid-cols-12 {
-    grid-template-columns: repeat(12, minmax(0, 1fr));
+  .md\:w-max {
+    width: -moz-max-content;
+    width: max-content;
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:grid-rows-4 {
-    grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
   .md\:flex-row {
